# gaussian-object-modelling

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml
action/: GenerateObjectModel.action
config/: config.rviz  gp_parameters.yaml  surface.rviz
include/: gp_node.h  node_utils.hpp  random_generation.hpp  surface_approx.h
include/atlas/: atlas.hpp  atlas_collision.hpp  atlas_variance.hpp  exp_multibranch.hpp  exp_single_path.hpp  explorer.hpp
include/gp/: CovLaplace.h  CovLaplace.hpp~  CovLaplace.h~  CovSE.h  CovThinPlate.h  CovThinPlate.h~  Covs.h  Covs.h~  GaussianProcess.h  GaussianProcess.h~  SampleSet.h  SampleSet.h~  Vec3.h  Vec3.h~  cov_functions.h
include/gp_regression/: atlas.hpp  cov_functions.h  gp_modelling.h  gp_planner.h  gp_planner.hpp  gp_projector.h  gp_projector.hpp  gp_regression_exception.h  gp_regressor.h  gp_regressor.hpp  gp_regressors.h  random_generation.hpp
include/gp_regression/kernels/: gaussian.hpp  inverse_multiquadratic.hpp  laplace.hpp  thin_plate.hpp
launch/: Main.launch  config.rviz  gp_node.launch
matlab_src/: Cov_gauss.m  Cov_inv_multiquadric.m  Cov_laplace.m  Cov_matern_32.m  Cov_matern_52.m  Cov_nuklei.m  Cov_thin_plate.asv  Cov_thin_plate.m  Regression_hand_obj.m  Regression_obj.m  original.stl  plot3_to_surf.m  reconstructed.stl  regression_3D_points.m  test_gp_regression.asv  test_gp_regression.m  test_gp_regression_3Dsurf.m  test_gp_regression_3Dsurf_2.asv  test_gp_regression_3Dsurf_2.m  test_gp_regression_implicit.m
msg/: .gitignore  Atlas.msg  Chart.msg  MapCollection.msg  Path.msg  SampleToExplore.msg
node/: gp_node.cpp  gp_node_main.cpp
node/include/: gp_node.h
resources/: bowlA.pcd  bowlB.pcd  container.pcd  containerA.pcd  containerB.pcd  example_gp.bag  funnel.pcd  hand.pcd  jug.pcd  kettle.pcd  kitchenUtensilB.pcd  mug.pcd  mugD.pcd  obj.pcd  obj_old.pcd  pasta.pcd  pot.pcd  scene.pcd  spoon.pcd  surf.pcd  surf2.pcd  surf2DS.pcd  surfDS.pcd
results/: .gitignore
scripts/: perform.sh
src/: gp_node.cpp  gp_node_main.cpp  object_model_node.cpp  regression_server.cpp  surface_approx.cpp
src/gp/: SampleSet.cpp  SampleSet.cpp~
src/include/: gp_node.h  node_utils.hpp
srv/: GetNextBestPath.srv  GetToExploreTrajectory.srv  PickPoint.srv  SelectNSamples.srv  StartProcess.srv  StopExploration.srv  Update.srv  start_process.srv
tests/: test_eigen.cpp  test_gaussian.cpp  test_gp.cpp
